vlib/v/checker/tests/option_type_call_err.out
vlib/v/checker/tests/option_type_call_err.vv:4:5: error: os.ls() returns a Result, so it should have either an `or {}` block, or `!` at the end
    2 | 
    3 | fn main() {
    4 |     os.ls('.').filter(it.ends_with('.v')) or { return }
      |        ~~~~~~~
    5 | }
